memperbaiki typo di tanggal, title, dan posisi footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preload" as="image" href="one/two/babel.png">
     <link rel="preload" as="image" href="one/two/binar.png">
     <link rel="stylesheet" href="one/style.css">
-    <title>Profile</title> 
+    <title>Nirmala 3rd Anniversary</title> 
 </head>
 <body>
     <div class="penuh" id="home">
@@ -21,7 +21,7 @@
         </div>
         <div class="jam">
             <p class="pukul">0:05</p>
-            <p class="tanggal">Tuesday, NOvember 01</p>
+            <p class="tanggal">Tuesday, November 01</p>
             <p class="hari">Today</p>
         </div>
         <div class="burem bub1">
